History
=======

Version 0.8.13 - Unreleased
---------------------------

- Fixed bug that caused the "Include collector items" option to
  be ignored (i.e. always on) in "Send as newsletter" previews.
  Also, there is now a default cue for the dummy preview subscriber.
  The cue is always "one week ago".
  [tmog]

Version 0.8.12 - 2009-09-15
---------------------------

- Changed the email address validation. The old one allowed a few bad
  addresses to slip through - addresses with trailing dots for instance.
  The new validation is generally stricter. Note that 'simple' local addresses
  like 'admin@localhost' are no longer allowed. For special use-cases where you
  need this, you must change the validation RegExp. However, for most usecases, I
  believe this is a big improvement.
  [tmog]


Version 0.8.11 - 2009-09-03
---------------------------

- Added alternative "My subscriptions" page. It's based on a single form
  with subforms, instead of multiple forms like the old one. It's main
  feature is that it displays the ISubscriptionKey (the email address ;-))
  and "subscribe" button only once. It has a checkbox for subscribing to
  each channel.
  To try the new version, select it from the new "Global settings" controlpanel.
  [tmog]

- Translated new messageids for german language and updated some old ones.
  [saily]

Version 0.8.10 - 2009-06-11
---------------------------

- Fix bug where collector sort criteria other than 'created' and
  'effective' would result in an error. [nouri]

- Fixed and added test for newsletter preview form.  The preview in
  the channel page would fail before with ``TypeError: eval() arg 1
  must be a string or code object``. [nouri]

Version 0.8.9 - 2009-03-11
--------------------------

- Fix the bug that Doug found where items from collectors would be
  rendered fully. [nouri]

- Update installation instructions to account for Plone 3.2.x
  buildouts, which are somewhat different. [nouri]
