@@ -271,7 +271,7 @@ class HTMLComposer(persistent.Persistent):
             contents=[i[0] for i in items],
             items=[dict(formatted=i[0], original=i[1]) for i in items],
             **vars)
-        return stoneagehtml.compactify(html).decode('utf-8')
+        return stoneagehtml.compactify(html, filter_tags=False).decode('utf-8')
 
     def render(self, subscription, items=(), override_vars=None):
         vars = self._vars(subscription, items)
@@ -306,7 +306,7 @@ class HTMLComposer(persistent.Persistent):
                 target_language=self.language)
 
         html = self.confirm_template(**vars)
-        html = stoneagehtml.compactify(html).decode('utf-8')
+        html = stoneagehtml.compactify(html, filter_tags=False).decode('utf-8')
         html = string.Template(html).safe_substitute(subscription_vars)
         
         message = collective.singing.mail.create_html_mail(
@@ -332,7 +332,7 @@ class HTMLComposer(persistent.Persistent):
                 target_language=self.language)
 
         html = self.forgot_template(**vars)
-        html = stoneagehtml.compactify(html).decode('utf-8')
+        html = stoneagehtml.compactify(html, filter_tags=False).decode('utf-8')
         html = string.Template(html).safe_substitute(subscription_vars)
 
         message = collective.singing.mail.create_html_mail(
