@@ -4,6 +4,14 @@ History
 Version 0.8.13 - Unreleased
 ---------------------------
 
+- Disabled stoneagehtml style attributes blacklist since it stripped
+  out font-familiy from the styles added to a channel which confused 
+  several users. This fixes http://tinyurl.com/ygmhv7a
+  Unfortunately its not possible to specify a custom 
+  black list like stoneagehtml.compactify(html, filter_tags=['position'...])
+  since the stoneagehtml dosen't support that yet - http://tinyurl.com/ykwca4p.
+  [pelle]
+
 - Fixed bug that caused the "Include collector items" option to
   be ignored (i.e. always on) in "Send as newsletter" previews.
   Also, there is now a default cue for the dummy preview subscriber.
